@@ -250,6 +250,11 @@ line-height:28px;
 /* FOOD4BOT */
 #filibuster-food4bot{position:absolute;display:none;}
 
+/* PRIVACYCOOKIE */
+#filibuster-privacycookie{position:absolute;top:0px;left:0px;right:0px;background:black;color:white;border:1px solid silver;padding:2px 10px;font-family:verdana,sans-serif;font-size:80%;}
+#filibuster-privacycookie span{float:right;cursor:pointer;}
+#filibuster-privacycookie a{color:red;cursor:pointer;text-decoration:none;}
+
 /* CLASSI UTILI */
 .noWrap{white-space:nowrap;}
 .noHyphen{
