@@ -1,0 +1,25 @@
+<!DOCTYPE html>
+<html lang="<?php print $VOICELANG ?>">
+<head>
+<meta charset="utf-8" />
+<meta http-equiv="x-ua-compatible" content="ie=edge, chrome=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Policy sui cookie</title>
+</head>
+
+<body style="margin:20px;font-family:verdana,sans-serif;font-size:100%;line-height:200%;">
+<b>Cosa sono i cookie?</b><br>
+I cookie sono file di testo salvati sul tuo computer allo scopo di memorizzare dati per un loro riutilizzo successivo. <br>
+<br>
+<b>Come usiamo i cookie</b><br>
+Analisi: vengono tracciate in modo anonimo le pagine visitate a scopo statistico.<br>
+Impostazioni: alcune scelte effettuate durante la navigazione sono memorizzate per essere riproposte automaticamente.<br>
+Sicurezza: eventuali meccanismi di autenticazione non possono funzionare senza i cookie.<br>
+<i>I cookie che abbiamo impostato non sono visibili all'esterno del sito e non sono utilizzati a scopo pubblicitario.</i><br>
+<br>
+<b>Le tue scelte riguardo ai cookie</b><br>
+Puoi scegliere di visualizzare un avviso da parte del computer ogni volta che si installa un cookie, 
+oppure di disattivare tutti i cookie.<br>
+Puoi impostare queste preferenze tra le opzioni del tuo browser. 
+</body>
+</html>
